# ExoPlayer

./: README.md  settings.gradle
extensions/ffmpeg/: build.gradle
extensions/ffmpeg/src/main/jni/: build_ffmpeg.sh  ffmpeg_jni.cc
extensions/opus/src/main/jni/: Application.mk  CMakeLists.txt  convert_android_asm.sh  libopus.mk
extensions/opus/src/main/jni/opus/: .gitignore  CMakeLists.txt
extensions/opus/src/main/jni/opus/meson/: README.md
